fix logo bg z-index issue, add manual breadcrumbs

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -7424,7 +7424,8 @@ footer {
   background-color: #231f20;
   color: #fff;
   padding: 30px 0 50px 0;
-  position: relative; }
+  position: relative;
+  z-index: 2; }
   footer a {
     color: #fff; }
     footer a:hover {
@@ -7466,12 +7467,13 @@ main aside {
   min-height: 235px;
   padding: 25px;
   position: relative;
-  z-index: 1; }
+  z-index: 2; }
 
 main article {
   background-color: #fff;
   padding: 50px 50px 75px 50px;
-  position: relative; }
+  position: relative;
+  z-index: 1; }
   @media (min-width: 992px) {
     main article {
       padding: 50px 50px 125px 50px; }
@@ -7484,7 +7486,7 @@ main article {
         position: absolute;
         top: 164px;
         width: 511px;
-        z-index: 0; } }
+        z-index: -1; } }
 
 .breadcrumb {
   background: none;
