--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -3,6 +3,7 @@ footer {
 	color: $brand-white;
 	padding: 30px 0 50px 0;
 	position: relative;
+	z-index: 2;
 
 	a {
 		color: $brand-white;
